--- a/css/style-filmes.css
+++ b/css/style-filmes.css
@@ -1,39 +1,50 @@
 /*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
+/*
  * Principal
  */
 
-* { 
+* {
    margin: 0;
    padding: 0;
    border: 0;
 }
 
-.div-box{   
+.div-box {
    background-size: cover;
    background-position: center;
    height: 100%;
    width: 100%;
-   box-shadow: inset 0 0 60rem rgba(0, 0, 0, 1);  
+   -webkit-box-shadow: inset 0 0 60rem rgba(0, 0, 0, 1);
+           box-shadow: inset 0 0 60rem rgba(0, 0, 0, 1);
 }
 
-html, body{
+html,
+body {
    height: 100%;
 }
 
-.texto-cover{
+.texto-cover {
    width: 100%;
    color: white;
-   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+   text-shadow: 0 .25rem .5rem rgba(0, 0, 0, .5);
    text-align: center;
    padding: 60px;
    position: absolute;
    bottom: 0px;
 }
 
-.texto-cover h1{
-   font-family: 'Open Sans', sans-serif; 
+.texto-cover h1 {
+   font-family: 'Open Sans', sans-serif;
+   font-size: 60px;
    font-weight: bolder;
 }
+
 /*
  * Navegador
  */
@@ -42,7 +53,7 @@ html, body{
    padding: 10px;
 }
 
-#imagem-logo{
+#imagem-logo {
    width: 300px;
 }
 
@@ -54,77 +65,84 @@ html, body{
 }
 
 .search-container {
-  display: inline-block;
-  position: relative;
-  width: 300px;
-  height: 50px;
-  padding: 0;
+   display: inline-block;
+   position: relative;
+   width: 300px;
+   height: 50px;
+   padding: 0;
 }
 
 input[type="text"] {
-  height: 50px;
-  width: 50px;
-  font-size: 30px;
-  display: inline-block;
-  padding: 20px;
-  border-radius: 50px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: none;
-  border: none;
-  outline: none;
-  z-index: 3;
-  transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
-  cursor: pointer;
+   height: 50px;
+   width: 50px;
+   font-size: 30px;
+   display: inline-block;
+   padding: 20px;
+   border-radius: 50px;
+   position: absolute;
+   top: 0;
+   right: 0;
+   background: none;
+   border: none;
+   outline: none;
+   z-index: 3;
+   -webkit-transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+   -o-transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+   transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+   cursor: pointer;
 }
 
-input[type="text"]:hover + input[type="submit"]{
-  opacity: 0.4;
+input[type="text"]:hover+input[type="submit"] {
+   opacity: 0.4;
 }
 
 
 input[type="text"]:focus {
    margin-right: 50px;
    background-color: #ff944e;
-   color: white;
-  width: 80%;  
-  cursor: text;
+   color: #241f31;
+   width: 80%;
+   cursor: text;
 }
 
 input[type="submit"] {
-  height: 50px;
-  width: 50px;
-  display: inline-block;
-  background: url(../icons/pesquisa.png) center center no-repeat;
-  transform: scale(0.5);
-  text-indent: 10000px;
-  border: none;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 2;
-  cursor: pointer;
-  filter: invert(100%);
-
-  transition: opacity .4s ease;
+   height: 50px;
+   width: 50px;
+   display: inline-block;
+   background: url(../icons/pesquisa.png) center center no-repeat;
+   -webkit-transform: scale(0.5);
+       -ms-transform: scale(0.5);
+           transform: scale(0.5);
+   text-indent: 10000px;
+   border: none;
+   position: absolute;
+   top: 0;
+   right: 0;
+   z-index: 2;
+   cursor: pointer;
+   -webkit-filter: invert(100%);
+           filter: invert(100%);
+   -webkit-transition: opacity .4s ease;
+   -o-transition: opacity .4s ease;
+   transition: opacity .4s ease;
 }
 
 input[type="submit"]:hover {
-  opacity: 0.4;
+   opacity: 0.4;
 }
 
-input[type="text"]:focus ~ input[type="submit"]{
-      background: url(../icons/fechar.png) center center no-repeat;
-   }
+input[type="text"]:focus~input[type="submit"] {
+   background: url(../icons/fechar.png) center center no-repeat;
+}
 
-#search-input{
+#search-input {
    outline: none;
 }
 
-#search:focus ~ #search-results{
+#search:focus~#search-results {
    opacity: 1;
 }
+
 #search-results {
    position: relative;
    margin-right: 50px;
@@ -132,21 +150,21 @@ input[type="text"]:focus ~ input[type="submit"]{
    border-radius: 25px;
    opacity: 0;
    top: 52px;
-   z-index: 2;
+   z-index: 40;
    background-color: #ff944e;
    width: 80%;
    text-align: left;
-   display: none; 
+   display: none;
 }
 
 .search-item {
    border-bottom: solid 1px white;
-   color: white;
+   color: #241f31;
    cursor: pointer;
 }
 
-.search-item:last-child{
-      border-bottom: none;
+.search-item:last-child {
+   border-bottom: none;
 }
 
 .search-item p {
@@ -155,13 +173,14 @@ input[type="text"]:focus ~ input[type="submit"]{
 }
 
 .search-item:hover {
-   color: black;
    background-color: white;
 }
+
 .search-item:last-child:hover {
    border-bottom-right-radius: 25px;
    border-bottom-left-radius: 25px;
 }
+
 .search-item:first-child:hover {
    border-top-right-radius: 25px;
    border-top-left-radius: 25px;
@@ -178,28 +197,19 @@ input[type="text"]:focus ~ input[type="submit"]{
    font-size: 16px;
 }
 
-#alto-contraste{
-   background-color: transparent;
-   height: 50px;
-   padding: 10px;
-}
-
-#div-alto-contraste{
+#div-container {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   align-items: center;
-}
-
-#sol-alto-contraste{
-   height: 30px;
-}
-
-#div-container{
-   display: flex;
-   flex-direction: row;
+   -webkit-box-orient: horizontal;
+   -webkit-box-direction: normal;
+       -ms-flex-direction: row;
+           flex-direction: row;
 }
 
 body {
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+   -webkit-box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+           box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
 
@@ -208,82 +218,83 @@ body {
  */
 
 main {
-  width: 100%;
-  background-color: #FAF9F6;
+   width: 100%;
+   background-color: #FAF9F6;
 }
 
 .filme {
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   flex-direction: row;
-   justify-content: center;
-   flex-wrap: wrap;
-   align-content: flex-start;
+   -webkit-box-orient: horizontal;
+   -webkit-box-direction: normal;
+       -ms-flex-direction: row;
+           flex-direction: row;
+   -webkit-box-pack: center;
+       -ms-flex-pack: center;
+           justify-content: center;
+   -ms-flex-wrap: wrap;
+       flex-wrap: wrap;
+   -ms-flex-line-pack: start;
+       align-content: flex-start;
    padding-top: 100px;
-} 
+}
 
-.div-wrap{
+.div-wrap {
    margin-left: 40px;
    margin-right: 40px;
    text-align: justify;
    width: 500px;
    padding-top: 20px;
    padding-bottom: 20px;
-   font-family: 'Open Sans', sans-serif; 
+   font-family: 'Open Sans', sans-serif;
 }
 
-.div-wrap p{
-   font-size: 18px;
-   line-height: 1.5;
-}
-
-.div-wrap h3{
-   font-size: 30px;
-   padding-bottom: 10px;
-   font-weight: bold;
-}
-
-.div-wrap2{
+.div-wrap2 {
    margin-left: 40px;
    margin-right: 40px;
    text-align: justify;
    width: 1080px;
    padding-top: 20px;
    padding-bottom: 20px;
-   font-family: 'Open Sans', sans-serif; 
+   font-family: 'Open Sans', sans-serif;
 }
 
-.div-wrap2 p{
+.div-wrap p,
+.div-wrap2 p {
    font-size: 18px;
    line-height: 1.5;
 }
 
-.div-wrap2 h3{
+.div-wrap h3 ,
+.div-wrap2 h3 {
    font-size: 30px;
    padding-bottom: 10px;
    font-weight: bold;
 }
 
 
-@media only screen and (max-width: 1060px){
-   .div-wrap2{
+@media only screen and (max-width: 1060px) {
+   .div-wrap2 {
       width: 500px;
    }
 }
 
-#poster{
+#poster {
    width: 100%;
 }
 
 
-.icon{
+.icon {
    margin-right: 20px;
    margin-bottom: 20px;
    width: 100px;
    border-radius: 20px;
 }
 
-.icon:hover{
-   box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.75);
+.icon:hover {
+   -webkit-box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.75);
+           box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.75);
 }
 
 /*
@@ -296,17 +307,20 @@ table.ghibli-table {
    width: 100%;
    text-align: left;
 }
-table.ghibli-table td, table.ghibli-table th {
+
+table.ghibli-table td,
+table.ghibli-table th {
    border: 1px solid #FFFFFF;
    padding: 10px 9px;
    font-size: 16px;
    color: #FFFFFF;
 }
+
 table.ghibli-table th {
-  font-weight: bold;
+   font-weight: bold;
 }
 
-#bandeira{
+#bandeira {
    height: 22px;
 }
 
@@ -314,19 +328,28 @@ table.ghibli-table th {
  * Rodapé
  */
 
-#rodape{
+#rodape {
    padding: 0 30px 0 30px;
    width: 100%;
    height: 150px;
+   display: -webkit-box;
+   display: -ms-flexbox;
    display: flex;
-   align-content: center;
-   flex-direction: row-reverse;
-   align-items: center;
-   justify-content: space-around;
+   -ms-flex-line-pack: center;
+       align-content: center;
+   -webkit-box-orient: horizontal;
+   -webkit-box-direction: reverse;
+       -ms-flex-direction: row-reverse;
+           flex-direction: row-reverse;
+   -webkit-box-align: center;
+       -ms-flex-align: center;
+           align-items: center;
+   -ms-flex-pack: distribute;
+       justify-content: space-around;
    text-align: center;
 }
 
-#texto-rodape{
+#texto-rodape {
    height: 40px;
    font-size: 16px;
    font-family: 'VT323', serif;
@@ -334,15 +357,16 @@ table.ghibli-table th {
    margin: 30px;
 }
 
-#imagem-logo2{
+#imagem-logo2 {
    height: 30px;
 }
 
-#scroll-up{
+#scroll-up {
    width: 50px;
    height: 50px;
    background-color: #ff944e;
-   align-self: flex-start;
+   -ms-flex-item-align: start;
+       align-self: flex-start;
    position: relative;
    top: -25px;
    border-radius: 10px;
@@ -350,12 +374,12 @@ table.ghibli-table th {
    color: black;
 }
 
-#scroll-up:hover{
+#scroll-up:hover {
    background-color: black;
    color: white;
 }
 
-#seta{
+#seta {
    font-size: 30px;
    display: inline-block;
    pointer-events: none;
@@ -369,41 +393,56 @@ table.ghibli-table th {
  * Mobile
  */
 
-@media only screen and (max-width: 620px){
-   .container-fluid{
+@media only screen and (max-width: 620px) {
+   .container-fluid {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
       text-align: center;
       margin: auto;
    }
 
-   .container-out{
+   .container-out {
       width: 100%;
       text-align: center;
       margin: auto;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
    }
 
-   #imagem-logo{
+   #imagem-logo {
       display: inline-block;
       width: 80%;
       margin: 20px;
-      justify-content: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
    }
 
-   .search-container{
+   .search-container {
       width: 90%;
       margin: auto;
    }
 
-   #search-engine{
+   #search-engine {
       margin: 0 auto;
    }
 
-   input[type="text"]{
+   input[type="text"] {
       margin-right: 50px;
       background-color: #ff944e;
       color: white;
@@ -412,37 +451,57 @@ table.ghibli-table th {
       cursor: text;
    }
 
-   .icon{
+   .texto-cover h1{
+      font-size: 30px;
+   }
+
+   .icon {
       margin: 10px 10px 10px 10px;
    }
 
-   .texto-img{
+   .texto-img {
       opacity: 1;
    }
 
-   .div-wrap:last-child{
+   #div-wrap-assista {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
    }
 
-   #rodape{
-      flex-direction: column;
-      justify-content: center;
+   #rodape {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
    }
 
-   #scroll-up{
-      align-self: auto;
+   #scroll-up {
+      -ms-flex-item-align: auto;
+          -ms-grid-row-align: auto;
+          align-self: auto;
    }
 
-   input[type="submit"]{
+   input[type="submit"] {
       background: url(../icons/fechar.png) center center no-repeat;
    }
 }
 
-@media only screen and (max-width: 400px){
-   #imagem-logo2{
+@media only screen and (max-width: 400px) {
+   #imagem-logo2 {
       width: 80%;
       height: auto;
    }
