--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,22 @@
 /*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
+/*
  * Principal
  */
 
-* { 
-  margin: 0;
-  padding: 0;
-  border: 0;    
+* {
+	margin: 0;
+	padding: 0;
+	border: 0;
 }
 
-html, body{
+html,
+body {
 	height: 100%;
 }
 
@@ -26,7 +34,7 @@ main {
 	padding: 10px;
 }
 
-#imagem-logo{
+#imagem-logo {
 	width: 300px;
 }
 
@@ -38,76 +46,83 @@ main {
 }
 
 .search-container {
-  display: inline-block;
-  position: relative;
-  width: 300px;
-  height: 50px;
-  padding: 0;
+	display: inline-block;
+	position: relative;
+	width: 300px;
+	height: 50px;
+	padding: 0;
 }
 
 input[type="text"] {
-  height: 50px;
-  width: 50px;
-  font-size: 30px;
-  display: inline-block;
-  padding: 20px;
-  border-radius: 50px;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: none;
-  border: none;
-  outline: none;
-  z-index: 3;
-  transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
-  cursor: pointer;
+	height: 50px;
+	width: 50px;
+	font-size: 30px;
+	display: inline-block;
+	padding: 20px;
+	border-radius: 50px;
+	position: absolute;
+	top: 0;
+	right: 0;
+	background: none;
+	border: none;
+	outline: none;
+	z-index: 3;
+	-webkit-transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+	-o-transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+	transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
+	cursor: pointer;
 }
 
-input[type="text"]:hover + input[type="submit"]{
-  opacity: 0.4;
+input[type="text"]:hover+input[type="submit"] {
+	opacity: 0.4;
 }
 
 
 input[type="text"]:focus {
 	margin-right: 50px;
 	background-color: #ff944e;
-	color: white;
-  width: 80%;
-  border-bottom: 1px solid #BBB;
-  cursor: text;
+	color: #241f31;
+	width: 80%;
+	border-bottom: 1px solid #BBB;
+	cursor: text;
 }
 
 input[type="submit"] {
-  height: 50px;
-  width: 50px;
-  display: inline-block;
-  background: url(../icons/pesquisa.png) center center no-repeat;
-  transform: scale(0.5);
-  text-indent: 10000px;
-  border: none;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 2;
-  cursor: pointer;
-  transition: opacity .4s ease;
+	height: 50px;
+	width: 50px;
+	display: inline-block;
+	background: url(../icons/pesquisa.png) center center no-repeat;
+	-webkit-transform: scale(0.5);
+	    -ms-transform: scale(0.5);
+	        transform: scale(0.5);
+	text-indent: 10000px;
+	border: none;
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 2;
+	cursor: pointer;
+	-webkit-transition: opacity .4s ease;
+	-o-transition: opacity .4s ease;
+	transition: opacity .4s ease;
 }
 
 input[type="submit"]:hover {
-  opacity: 0.4;
+	opacity: 0.4;
 }
 
-input[type="text"]:focus ~ input[type="submit"]{
-		background: url(../icons/fechar.png) center center no-repeat;
-	}
+input[type="text"]:focus~input[type="submit"] {
+	background: url(../icons/fechar.png) center center no-repeat;
+}
 
-#search-input{
+#search-input {
 	outline: none;
 }
 
-#search:focus ~ #search-results{
+#search:focus~#search-results {
 	opacity: 1;
 }
+
 #search-results {
 	position: relative;
 	margin-right: 50px;
@@ -115,20 +130,20 @@ input[type="text"]:focus ~ input[type="submit"]{
 	border-radius: 25px;
 	opacity: 0;
 	top: 52px;
-	z-index: 2;
+	z-index: 40;
 	background-color: #ff944e;
 	width: 80%;
 	text-align: left;
-	display: none;	
+	display: none;
 }
 
 .search-item {
 	border-bottom: solid 1px white;
-	color: white;
+	color: #241f31;
 	cursor: pointer;
 }
 
-.search-item:last-child{
+.search-item:last-child {
 	border-bottom: none;
 }
 
@@ -141,10 +156,12 @@ input[type="text"]:focus ~ input[type="submit"]{
 	color: black;
 	background-color: white;
 }
+
 .search-item:last-child:hover {
 	border-bottom-right-radius: 25px;
 	border-bottom-left-radius: 25px;
 }
+
 .search-item:first-child:hover {
 	border-top-right-radius: 25px;
 	border-top-left-radius: 25px;
@@ -167,34 +184,30 @@ input[type="text"]:focus ~ input[type="submit"]{
  */
 
 .carousel-caption {
-  bottom: 3rem;
-  z-index: 10;
+	bottom: 3rem;
+	z-index: 10;
 }
 
 .carousel-item {
 	background-size: cover;
 	background-position: center;
-  height: 33rem;
-  background-color: black;
+	height: 33rem;
+	background-color: black;
 }
 
 @media (min-width: 40em) {
 
-  .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
-    line-height: 1.4;
-  }
+	.carousel-caption p {
+		margin-bottom: 1.25rem;
+		font-size: 1.25rem;
+		line-height: 1.4;
+	}
 }
 
-.carousel-caption h1{
-  font-family: 'Open Sans', monospace;
-  font-weight: bold;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-}
-
-.carousel-control-prev-icon{
-	filter: brightness(99);
+.carousel-caption h1 {
+	font-family: 'Open Sans', monospace;
+	font-weight: bold;
+	text-shadow: 0 0 4px #000;
 }
 
 
@@ -202,14 +215,18 @@ input[type="text"]:focus ~ input[type="submit"]{
  * Album
  */
 
-.card-body{
+.card-body {
 	position: relative;
 }
 
-.col{
-	text-align:center;
-	justify-content: center;
-	align-items: center;
+.col {
+	text-align: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 .texto-img {
@@ -217,27 +234,30 @@ input[type="text"]:focus ~ input[type="submit"]{
 	font-weight: bold;
 	font-family: 'VT323', monospace;
 	font-size: 20px;
-  position: relative;  
-  margin-right: auto;
-  margin-left: auto;
-  color: #363636; 
-  border-radius: 5px;
-  opacity: 0;
+	position: relative;
+	margin-right: auto;
+	margin-left: auto;
+	color: #363636;
+	border-radius: 5px;
+	opacity: 0;
 }
 
-.col:hover .texto-img{
-	transition-duration: 0.2s;
+.col:hover .texto-img {
+	-webkit-transition-duration: 0.2s;
+	     -o-transition-duration: 0.2s;
+	        transition-duration: 0.2s;
 	opacity: 1;
 }
 
-.thumbnail{
-	object-fit: cover;
+.thumbnail {
+	-o-object-fit: cover;
+	   object-fit: cover;
 	height: 225px;
 	width: 100%;
 	border-radius: 5px;
 }
 
-.col:hover{
+.col:hover {
 	opacity: 60%;
 }
 
@@ -245,19 +265,28 @@ input[type="text"]:focus ~ input[type="submit"]{
  * Rodapé
  */
 
-#rodape{
+#rodape {
 	padding: 0 30px 0 30px;
 	width: 100%;
 	height: 150px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-content: center;
-	flex-direction: row-reverse;
-	align-items: center;
-	justify-content: space-around;
+	-ms-flex-line-pack: center;
+	    align-content: center;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: reverse;
+	    -ms-flex-direction: row-reverse;
+	        flex-direction: row-reverse;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
 	text-align: center;
 }
 
-#texto-rodape{
+#texto-rodape {
 	height: 40px;
 	font-size: 16px;
 	font-family: 'VT323', monospace;
@@ -265,28 +294,29 @@ input[type="text"]:focus ~ input[type="submit"]{
 	margin: 30px;
 }
 
-#imagem-logo2{
+#imagem-logo2 {
 	height: 30px;
 }
 
-#scroll-up{
+#scroll-up {
 	width: 50px;
 	height: 50px;
 	background-color: #ff944e;
-	align-self: flex-start;
+	-ms-flex-item-align: start;
+	    align-self: flex-start;
 	position: relative;
 	top: -25px;
 	border-radius: 10px;
 	padding-right: 5px;
-	color: white;
-}
-
-#scroll-up:hover{
-	background-color: white;
 	color: black;
 }
 
-#seta{
+#scroll-up:hover {
+	background-color: black;
+	color: white;
+}
+
+#seta {
 	font-size: 30px;
 	display: inline-block;
 	pointer-events: none;
@@ -300,70 +330,92 @@ input[type="text"]:focus ~ input[type="submit"]{
  * Mobile
  */
 
-@media only screen and (max-width: 620px){
-	.container-fluid{
+@media only screen and (max-width: 620px) {
+	.container-fluid {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
 		text-align: center;
 		margin: auto;
 	}
 
-	.container-out{
+	.container-out {
 		width: 100%;
 		text-align: center;
 		margin: auto;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		justify-content: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
 	}
 
-	.search-container{
+	.search-container {
 		width: 90%;
 		margin: auto;
 	}
 
-	#search-engine{
+	#search-engine {
 		margin: 0 auto;
 	}
-	
-	input[type="text"]{
+
+	input[type="text"] {
 		margin-right: 50px;
 		background-color: #ff944e;
 		color: white;
-	  width: 80%;
-	  border-bottom: 1px solid #BBB;
-	  cursor: text;
+		width: 80%;
+		border-bottom: 1px solid #BBB;
+		cursor: text;
 	}
 
-	#imagem-logo{
+	#imagem-logo {
 		display: inline-block;
 		width: 80%;
 		margin: 20px;
-		justify-content: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
 	}
 
-	.texto-img{
+	.texto-img {
 		opacity: 1;
 	}
 
-	#rodape{
-		flex-direction: column;
-		justify-content: center;
+	#rodape {
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
 	}
 
-	#scroll-up{
-		align-self: auto;
+	#scroll-up {
+		-ms-flex-item-align: auto;
+		    -ms-grid-row-align: auto;
+		    align-self: auto;
 	}
 
-	input[type="submit"]{
+	input[type="submit"] {
 		background: url(../icons/fechar.png) center center no-repeat;
 	}
 }
 
-@media only screen and (max-width: 400px){
-   #imagem-logo2{
-      width: 80%;
-      height: auto;
-   }
+@media only screen and (max-width: 400px) {
+	#imagem-logo2 {
+		width: 80%;
+		height: auto;
+	}
 }
