--- a/css/style-filmes.css
+++ b/css/style-filmes.css
@@ -92,7 +92,7 @@ input[type="text"] {
    cursor: pointer;
 }
 
-input[type="text"]:hover+input[type="submit"] {
+input[type="text"]:hover+input[type="button"] {
    opacity: 0.4;
 }
 
@@ -105,7 +105,7 @@ input[type="text"]:focus {
    cursor: text;
 }
 
-input[type="submit"] {
+input[type="button"] {
    height: 50px;
    width: 50px;
    display: inline-block;
@@ -127,11 +127,11 @@ input[type="submit"] {
    transition: opacity .4s ease;
 }
 
-input[type="submit"]:hover {
+input[type="button"]:hover {
    opacity: 0.4;
 }
 
-input[type="text"]:focus~input[type="submit"] {
+input[type="text"]:focus~input[type="button"] {
    background: url(../icons/fechar.png) center center no-repeat;
 }
 
@@ -495,7 +495,7 @@ table.ghibli-table th {
           align-self: auto;
    }
 
-   input[type="submit"] {
+   input[type="button"] {
       background: url(../icons/fechar.png) center center no-repeat;
    }
 }
