--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,4 @@
 /*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.4.14,
-* Autoprefixer: v10.4.7
-* Browsers: last 4 version
-*/
-
-/*
  * Principal
  */
 
@@ -67,13 +60,11 @@ input[type="text"] {
 	border: none;
 	outline: none;
 	z-index: 3;
-	-webkit-transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
-	-o-transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
 	transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
 	cursor: pointer;
 }
 
-input[type="text"]:hover+input[type="submit"] {
+input[type="text"]:hover+input[type="button"] {
 	opacity: 0.4;
 }
 
@@ -87,14 +78,12 @@ input[type="text"]:focus {
 	cursor: text;
 }
 
-input[type="submit"] {
+input[type="button"] {
 	height: 50px;
 	width: 50px;
 	display: inline-block;
 	background: url(../icons/pesquisa.png) center center no-repeat;
-	-webkit-transform: scale(0.5);
-	    -ms-transform: scale(0.5);
-	        transform: scale(0.5);
+	transform: scale(0.5);
 	text-indent: 10000px;
 	border: none;
 	position: absolute;
@@ -102,16 +91,14 @@ input[type="submit"] {
 	right: 0;
 	z-index: 2;
 	cursor: pointer;
-	-webkit-transition: opacity .4s ease;
-	-o-transition: opacity .4s ease;
 	transition: opacity .4s ease;
 }
 
-input[type="submit"]:hover {
+input[type="button"]:hover {
 	opacity: 0.4;
 }
 
-input[type="text"]:focus~input[type="submit"] {
+input[type="text"]:focus~input[type="button"] {
 	background: url(../icons/fechar.png) center center no-repeat;
 }
 
@@ -221,12 +208,8 @@ input[type="text"]:focus~input[type="submit"] {
 
 .col {
 	text-align: center;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	justify-content: center;
+	align-items: center;
 }
 
 .texto-img {
@@ -243,15 +226,12 @@ input[type="text"]:focus~input[type="submit"] {
 }
 
 .col:hover .texto-img {
-	-webkit-transition-duration: 0.2s;
-	     -o-transition-duration: 0.2s;
-	        transition-duration: 0.2s;
+	transition-duration: 0.2s;
 	opacity: 1;
 }
 
 .thumbnail {
-	-o-object-fit: cover;
-	   object-fit: cover;
+	object-fit: cover;
 	height: 225px;
 	width: 100%;
 	border-radius: 5px;
@@ -269,20 +249,11 @@ input[type="text"]:focus~input[type="submit"] {
 	padding: 0 30px 0 30px;
 	width: 100%;
 	height: 150px;
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-line-pack: center;
-	    align-content: center;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: reverse;
-	    -ms-flex-direction: row-reverse;
-	        flex-direction: row-reverse;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	-ms-flex-pack: distribute;
-	    justify-content: space-around;
+	align-content: center;
+	flex-direction: row-reverse;
+	align-items: center;
+	justify-content: space-around;
 	text-align: center;
 }
 
@@ -302,8 +273,7 @@ input[type="text"]:focus~input[type="submit"] {
 	width: 50px;
 	height: 50px;
 	background-color: #ff944e;
-	-ms-flex-item-align: start;
-	    align-self: flex-start;
+	align-self: flex-start;
 	position: relative;
 	top: -25px;
 	border-radius: 10px;
@@ -332,19 +302,10 @@ input[type="text"]:focus~input[type="submit"] {
 
 @media only screen and (max-width: 620px) {
 	.container-fluid {
-		display: -webkit-box;
-		display: -ms-flexbox;
 		display: flex;
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		    -ms-flex-direction: column;
-		        flex-direction: column;
-		-webkit-box-align: center;
-		    -ms-flex-align: center;
-		        align-items: center;
-		-webkit-box-pack: center;
-		    -ms-flex-pack: center;
-		        justify-content: center;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
 		text-align: center;
 		margin: auto;
 	}
@@ -353,12 +314,8 @@ input[type="text"]:focus~input[type="submit"] {
 		width: 100%;
 		text-align: center;
 		margin: auto;
-		display: -webkit-box;
-		display: -ms-flexbox;
 		display: flex;
-		-webkit-box-pack: center;
-		    -ms-flex-pack: center;
-		        justify-content: center;
+		justify-content: center;
 	}
 
 	.search-container {
@@ -383,9 +340,7 @@ input[type="text"]:focus~input[type="submit"] {
 		display: inline-block;
 		width: 80%;
 		margin: 20px;
-		-webkit-box-pack: center;
-		    -ms-flex-pack: center;
-		        justify-content: center;
+		justify-content: center;
 	}
 
 	.texto-img {
@@ -393,22 +348,15 @@ input[type="text"]:focus~input[type="submit"] {
 	}
 
 	#rodape {
-		-webkit-box-orient: vertical;
-		-webkit-box-direction: normal;
-		    -ms-flex-direction: column;
-		        flex-direction: column;
-		-webkit-box-pack: center;
-		    -ms-flex-pack: center;
-		        justify-content: center;
+		flex-direction: column;
+		justify-content: center;
 	}
 
 	#scroll-up {
-		-ms-flex-item-align: auto;
-		    -ms-grid-row-align: auto;
-		    align-self: auto;
+		align-self: auto;
 	}
 
-	input[type="submit"] {
+	input[type="button"] {
 		background: url(../icons/fechar.png) center center no-repeat;
 	}
 }
